[gd_scene load_steps=12 format=2]

[ext_resource path="res://code/acid_enemy.gd" type="Script" id=1]
[ext_resource path="res://art/aux_art/acid_drool/acid_drool_0.png" type="Texture" id=2]
[ext_resource path="res://art/aux_art/acid_drool/acid_drool_2.png" type="Texture" id=3]
[ext_resource path="res://art/aux_art/acid_drool/acid_drool_3.png" type="Texture" id=4]
[ext_resource path="res://art/aux_art/acid_drool/acid_drool_4.png" type="Texture" id=5]
[ext_resource path="res://art/aux_art/particles_desintegrate.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 3.36897

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.331429 )
colors = PoolColorArray( 0.484818, 0.929688, 0.116211, 1, 0.0625, 0.0551758, 0.0551758, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color_ramp = SubResource( 4 )

[node name="acid" type="KinematicBody2D"]
position = Vector2( 0, -0.854374 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="img" type="AnimatedSprite" parent="."]
position = Vector2( 0.0181512, 0.63439 )
scale = Vector2( 0.21397, 0.21397 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.210346, 0.729695 )
shape = SubResource( 2 )

[node name="timers" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0, 0.854374 )

[node name="timer_gone" type="Timer" parent="timers"]
one_shot = true

[node name="timer_particle" type="Timer" parent="timers"]
one_shot = true

[node name="particles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
process_material = SubResource( 5 )
texture = ExtResource( 6 )
[connection signal="timeout" from="timers/timer_gone" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="timers/timer_particle" to="." method="_on_Timer_timeout"]
